--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
         <div style="padding-top: 0.8rem;"> <!-- 1. Use inline CSS at least once in your index.html page. [1 mark]-->
             <div style="width: 14rem; margin: 0 auto; display: flex; flex-wrap: wrap; gap: 2rem; padding-bottom: 0.8rem; padding-top: 0.2rem">
                 <div style="flex: 1 0 0; width: 50%; text-align: center;">
-                    <img src = "images/Profile_Background_d.png" style = "max-width: 1000px; height: auto; display: block;">
+                    <img src = "images/Profile_Background_d.png" style = "max-width: 1000px; height: auto; display: block;" alt="profile background">
                     <div style = "margin-top: -95px;">
                         <div class="profile-wrapper">
                             <div class="profile-container">
                                 <img src="images/Cyber_End_Dragon.png" alt="Profile Image" class="profile-image">
                             </div>
-                            <h2 class="profile-name"> Kieran Johnston </h1>
+                            <h2 class="profile-name"> Kieran Johnston </h2>
                         </div>
                         <p class="profile-bio">
                             An idealist game developer, focused on game design, scripting, GUIs & gameplay.
