--- a/blades.html
+++ b/blades.html
@@ -77,7 +77,7 @@
                 <div style="width: 80vw; margin: 0 auto; display: flex; flex-wrap: wrap; gap: 2rem; padding-bottom: 0.8rem; padding-top: 0.2rem">
                     <div style="flex: 1 0 0; width: 50%; text-align: center;">
                         <div style="max-width: 1000px;">
-                            <img src="images/Blades_V6_Artsy_b.png" style="max-width: 400px; height: auto; display: block; margin: 0 auto;">
+                            <img src="images/Blades_V6_Artsy_b.png" alt="game title" style="max-width: 400px; height: auto; display: block; margin: 0 auto;">
                         </div>
                         <div style = "margin-top: -47px;">
                             <div class="profile-wrapper">
@@ -86,7 +86,7 @@
                                         <img src="images/Blades_Icon.png" alt="Game Image" class="game-image">
                                     </div>
                                 </a>
-                                <h2 class="profile-name"> Description </h1>
+                                <h2 class="profile-name"> Description </h2>
                                
                                 <a style="margin-left: 0px; margin-top: -45px;" target="_blank" href="https://docs.google.com/document/d/1ay9XC1siLAN0Z8jRegiwKKkTDV8sbNwhRVm_ZrSouwQ/edit">
                                     <img src="images/GDD.png" alt="GDD Link" style="margin-left: 40px; margin-top: -35px;">
