--- a/brick_game.html
+++ b/brick_game.html
@@ -77,7 +77,7 @@
                 <div style="width: 80vw; margin: 0 auto; display: flex; flex-wrap: wrap; gap: 2rem; padding-bottom: 0.8rem; padding-top: 0.2rem">
                     <div style="flex: 1 0 0; width: 50%; text-align: center;">
                         <div style="max-width: 1000px;">
-                            <img src="images/Brick_Game_Text.png" style="max-width: 350px; height: auto; display: block; margin: 0 auto;">
+                            <img src="images/Brick_Game_Text.png" alt="game title" style="max-width: 350px; height: auto; display: block; margin: 0 auto;">
                         </div>
                         <div style = "margin-top: -47px;">
                             <div class="profile-wrapper">
@@ -86,7 +86,7 @@
                                         <img src="images/Brick_Game.png" alt="Game Image" class="game-image">
                                     </div>
                                 </a>
-                                <h2 class="profile-name"> Description </h1>
+                                <h2 class="profile-name"> Description </h2>
                                 
                             </div>
                             <p class="game-bio">
