--- a/project_slate.html
+++ b/project_slate.html
@@ -68,38 +68,51 @@
             </div>
         </div>
 
-        <div class="background-box" style="margin-left: 5vw;width: calc(90vw - 12px);height: 140vh;position: absolute;margin-top: 10vh;z-index: -1;">
+        <div class="background-box" style="margin-left: 5vw; width: calc(90vw - 12px); height: calc(40vh + 20rem); position: absolute; margin-top: 10vh; z-index: -1;">
 
             <div style="padding-top: 0.8rem;"> <!-- 1. Use inline CSS at least once in your index.html page. [1 mark]-->
                 <div style="width: 80vw; margin: 0 auto; display: flex; flex-wrap: wrap; gap: 2rem; padding-bottom: 0.8rem; padding-top: 0.2rem">
                     <div style="flex: 1 0 0; width: 50%; text-align: center;">
                         <div style="max-width: 1000px;">
-                            <img src="images/Blades_V6_Artsy_b.png" style="max-width: 400px; height: auto; display: block; margin: 0 auto;">
+                            <img src="images/Brick_Game_Text.png" alt="game title" style="max-width: 350px; height: auto; display: block; margin: 0 auto;">
                         </div>
                         <div style = "margin-top: -47px;">
                             <div class="profile-wrapper">
-                                <a target="_blank" href="https://www.roblox.com/games/928690113/Blades-V4-ALPHA-Update-Test-Server">
+                                <a target="_blank" href="https://www.roblox.com/games/526230850/BRICK-GAME-CLOSED-ALPHA-WIP">
                                     <div class="game-container">
-                                        <img src="images/Blades_Icon.png" alt="Game Image" class="game-image">
+                                        <img src="images/Brick_Game.png" alt="Game Image" class="game-image">
                                     </div>
                                 </a>
                                 <h2 class="profile-name"> Description </h2>
+                                
                             </div>
                             <p class="game-bio">
-A team match-based sword-fighting game featuring strategic loadouts,
-colorful maps, tactical game modes, character customization, and leaderboards.
+An open-world creature-collector adventure.
+Travel the world and solve puzzles. 
 
-More than 80 perks and 15 abilities to choose from!
-Negate, steal, evolve, empower, debuff, heal, slow!
+Form a party of up to 3 creatures.
+Experience their growth in size, stats, skills, types and passives.
 
-Min-max endless possibilities and create your own loadouts!
-Lead your team to victory and top the leaderboard!
-
+View and join battles anywhere with open-world combat!
+Climb the ranks of the arena and compete in tournaments.
 
                             </p>
-                            <div style="margin-left: 3vw; max-width: 74vw;">
+                            <div style="margin-left: 8vw; max-width: 64vw;">
                                 <div style="max-width: 100%; height: auto; max-height: 10rem;">
-                                    <video style="width: 100%; height: auto; max-height: 10rem;" playsinline="" loop="" controls=""><source src="https://i.gyazo.com/b92a7e9f16c56b071b8929ebfef33734.mp4" type="video/mp4"></video>
+                                    <p style="text-align: center;">Alpha Footage — <span style="font-size: 0.18rem;">01/04/2018</span></p>
+                                    <video style="width: 100%; height: auto; max-height: 10rem;" playsinline="" loop="" controls=""><source src="https://i.gyazo.com/0161cf3068390391325df9ca4b4dac4e.mp4" type="video/mp4"></video>
+                                </div>
+                            </div>
+                            <div style=" margin: 0 auto; margin-left: 3vw; max-width: 74vw; display: flex; flex-wrap: wrap; gap: 0.5rem;">
+                                <div style="flex: 1 0 0; width: 50%; text-align: center;">
+                                    <p style="text-align: center;">Pdn Mockup & In-Game — <span style="font-size: 0.18rem;">03/24/2018</span></p>
+                                    <img style="max-width: 100%; height: auto; max-height: 3rem;" src="images/AdventureMode_Draft.png" alt="portfolio work">
+                                    <img style="max-width: 100%; height: auto; max-height: 3rem;" src="images/Brick_Game_HUD.png" alt="portfolio work">
+                                </div>
+                                <div style="flex: 1 0 0; width: 50%; text-align: center;">
+                                    <p style="text-align: center;"> Design Mockups — <span style="font-size: 0.18rem;">03/11/2018</span></p>
+                                    <img style="max-width: 100%; height: auto; max-height: 3rem;" src="images/20180303_200921.jpg" alt="portfolio work">
+                                    <img style="max-width: 100%; height: auto; max-height: 3rem;" src="images/20180227_164315.jpg" alt="portfolio work">
                                 </div>
                             </div>
                         </div>
