Finished portfolio website LETS GOOO!
Finished portfolio website LETS GOOO!

--- a/perseverance.html
+++ b/perseverance.html
@@ -68,40 +68,37 @@
             </div>
         </div>
 
-        <div class="background-box" style="margin-left: 5vw;width: calc(90vw - 12px);height: 140vh;position: absolute;margin-top: 10vh;z-index: -1;">
+        <div class="background-box" style="margin-left: 5vw;width: calc(90vw - 12px);height: 100vh;position: absolute;margin-top: 10vh;z-index: -1;">
 
             <div style="padding-top: 0.8rem;"> <!-- 1. Use inline CSS at least once in your index.html page. [1 mark]-->
                 <div style="width: 80vw; margin: 0 auto; display: flex; flex-wrap: wrap; gap: 2rem; padding-bottom: 0.8rem; padding-top: 0.2rem">
                     <div style="flex: 1 0 0; width: 50%; text-align: center;">
                         <div style="max-width: 1000px;">
-                            <img src="images/Blades_V6_Artsy_b.png" style="max-width: 400px; height: auto; display: block; margin: 0 auto;">
+                            <img src="images/Logo_Vectory_Bright.png" style="max-width: 400px; height: auto; display: block; margin: 0 auto;">
                         </div>
                         <div style = "margin-top: -47px;">
                             <div class="profile-wrapper">
-                                <a target="_blank" href="https://www.roblox.com/games/928690113/Blades-V4-ALPHA-Update-Test-Server">
-                                    <div class="game-container">
-                                        <img src="images/Blades_Icon.png" alt="Game Image" class="game-image">
-                                    </div>
+                                <a target="_blank" href="https://www.roblox.com/games/5445817129/Perseverance-REWORK-FROM-SCRATCH">
+                                    <img src="images/Logo_Border.png" alt="Game Image" class="game-image" style="border-radius: 0%;">
                                 </a>
-                                <h2 class="profile-name"> Description </h2>
+                                <h2 class="profile-name" style = "margin-left: 44px;"> Description </h2>
+                                
+                                <a style="margin-left: 0px; margin-top: -45px;" target="_blank" href="https://docs.google.com/document/d/10SJMEWfnkWB4nlwJeAe2lXI5zbiJSQEj76XFa4tkB8E/edit?usp=sharing">
+                                    <img src="images/GDD.png" alt="GDD Link" style="margin-left: 40px; margin-top: -35px;">
+                                </a>
                             </div>
                             <p class="game-bio">
-A team match-based sword-fighting game featuring strategic loadouts,
-colorful maps, tactical game modes, character customization, and leaderboards.
+Perseverance is a roguelike MMORPG about becoming stronger in your own way.
+You can obtain a profession, learn and master the skills of a class, and uncover secrets throughout the world. 
 
-More than 80 perks and 15 abilities to choose from!
-Negate, steal, evolve, empower, debuff, heal, slow!
+Its unique charm lies in meaningful player progression and a game loop revolving around an irregular permadeath mechanic.
+If you die, you return a new mind to your past self, rolling back to a previous day as if the mistake that led to your death never happened.
 
-Min-max endless possibilities and create your own loadouts!
-Lead your team to victory and top the leaderboard!
+You get stronger through adapting your classes skills, strengths and weaknesses, changing and leveraging all the characteristics of your race,
+acquiring an arsenal of dynamic spells and magic and gaining new aptitudes and blessings from your many past adventures.
 
-
+<a target="_blank" style = "color:dodgerblue;" href="https://khjgames.github.io/PerseveranceWebsite/index.html">Visit Perseverance W-I-P Website:</a>
                             </p>
-                            <div style="margin-left: 3vw; max-width: 74vw;">
-                                <div style="max-width: 100%; height: auto; max-height: 10rem;">
-                                    <video style="width: 100%; height: auto; max-height: 10rem;" playsinline="" loop="" controls=""><source src="https://i.gyazo.com/b92a7e9f16c56b071b8929ebfef33734.mp4" type="video/mp4"></video>
-                                </div>
-                            </div>
                         </div>
                         <!--
                         <img class="internal_css_img" src ="images/what_3.png" alt="what is an Isekai game?">
