--- a/project_slate.html
+++ b/project_slate.html
@@ -74,45 +74,42 @@
                 <div style="width: 80vw; margin: 0 auto; display: flex; flex-wrap: wrap; gap: 2rem; padding-bottom: 0.8rem; padding-top: 0.2rem">
                     <div style="flex: 1 0 0; width: 50%; text-align: center;">
                         <div style="max-width: 1000px;">
-                            <img src="images/Brick_Game_Text.png" alt="game title" style="max-width: 350px; height: auto; display: block; margin: 0 auto;">
+                            <img src="images/Project_Slate_Text_B.png" alt="game title" style="max-width: 350px; height: auto; display: block; margin: 0 auto;">
                         </div>
                         <div style = "margin-top: -47px;">
                             <div class="profile-wrapper">
-                                <a target="_blank" href="https://www.roblox.com/games/526230850/BRICK-GAME-CLOSED-ALPHA-WIP">
-                                    <div class="game-container">
-                                        <img src="images/Brick_Game.png" alt="Game Image" class="game-image">
-                                    </div>
+                                <a target="_blank" href="https://www.roblox.com/games/16736793111/Project-Slate-IN-DEV">
+                                    <img src="images/Project_Slate_Circle.png" alt="Game Image" class="game-image">
                                 </a>
-                                <h2 class="profile-name"> Description </h2>
+                                <h2 class="profile-name" style = "margin-left: 44px;"> Description </h2>
                                 
                             </div>
                             <p class="game-bio">
-An open-world creature-collector adventure.
-Travel the world and solve puzzles. 
+A tile-based kingdom conquest strategy game inspired by Mount & Blade Warband ~ Prophecy of Pendor mod and Conquest of Elysium 5.
+Blends 3D world & 2D armies for creature fantasy, massive battles & tactics!
+Create a hero, strengthen your skills, amass an army, grow a kingdom, defeat your foes and conquer the land.
 
-Form a party of up to 3 creatures.
-Experience their growth in size, stats, skills, types and passives.
+Choose from multiple unique classes with differing playstyles! 
+From druids, priests, and necromancers, to knights, demons & lovecraftian horrors.
+Command, recruit, summon & empower armies unique to your class!
 
-View and join battles anywhere with open-world combat!
-Climb the ranks of the arena and compete in tournaments.
-
+Bits of roguelite deckbuilding progression, for endless depth and replayability.
+Features game modes, settings, custom map editor, full mod support, lobbies & matchmaking.
                             </p>
-                            <div style="margin-left: 8vw; max-width: 64vw;">
+                            <div style="margin-left: 15vw; max-width: 50vw;">
                                 <div style="max-width: 100%; height: auto; max-height: 10rem;">
-                                    <p style="text-align: center;">Alpha Footage — <span style="font-size: 0.18rem;">01/04/2018</span></p>
-                                    <video style="width: 100%; height: auto; max-height: 10rem;" playsinline="" loop="" controls=""><source src="https://i.gyazo.com/0161cf3068390391325df9ca4b4dac4e.mp4" type="video/mp4"></video>
+                                    <p style="text-align: center;"> Settlement Generation Code — <span style="font-size: 0.18rem;">02/23/2024</span></p>
+                                    <video style="width: 100%; height: auto; max-height: 10rem;" playsinline="" loop="" controls=""><source src="https://i.gyazo.com/211ca5466faa7a58fbf56630aa7d2e85.mp4" type="video/mp4"></video>
                                 </div>
                             </div>
                             <div style=" margin: 0 auto; margin-left: 3vw; max-width: 74vw; display: flex; flex-wrap: wrap; gap: 0.5rem;">
                                 <div style="flex: 1 0 0; width: 50%; text-align: center;">
-                                    <p style="text-align: center;">Pdn Mockup & In-Game — <span style="font-size: 0.18rem;">03/24/2018</span></p>
-                                    <img style="max-width: 100%; height: auto; max-height: 3rem;" src="images/AdventureMode_Draft.png" alt="portfolio work">
-                                    <img style="max-width: 100%; height: auto; max-height: 3rem;" src="images/Brick_Game_HUD.png" alt="portfolio work">
+                                    <p style="text-align: center;"> Map screenshot — <span style="font-size: 0.18rem;">07/1/2024</span></p>
+                                    <img style="max-width: 100%; height: auto; max-height: 3rem;" src="images/Screenshot_Closeup.png" alt="portfolio work">
                                 </div>
                                 <div style="flex: 1 0 0; width: 50%; text-align: center;">
-                                    <p style="text-align: center;"> Design Mockups — <span style="font-size: 0.18rem;">03/11/2018</span></p>
-                                    <img style="max-width: 100%; height: auto; max-height: 3rem;" src="images/20180303_200921.jpg" alt="portfolio work">
-                                    <img style="max-width: 100%; height: auto; max-height: 3rem;" src="images/20180227_164315.jpg" alt="portfolio work">
+                                    <p style="text-align: center;"> Map screenshot — <span style="font-size: 0.18rem;">07/1/2024</span></p>
+                                    <img style="max-width: 100%; height: auto; max-height: 3rem;" src="images/Screenshot.png" alt="portfolio work">
                                 </div>
                             </div>
                         </div>
